Add references for followers and followees through Friendship class

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,3 +10,4 @@ current: <%= current_user.email %>
    <% end %>
 
 <% end %>
+<%= link_to 'sign out', destroy_user_session_path, method: :delete %>
