Accept friend request creates friendship association where users follow each other

--- a/app/views/friend_requests/index.html.erb
+++ b/app/views/friend_requests/index.html.erb
@@ -1,7 +1,16 @@
 <h1>requests</h1>
 
-<% @requests.each do |r| %>
-    <%= r.sender_id %>
-    <%= link_to 'Accept request', accept_friend_request_path(r.id) %>
-    <%= link_to 'Reject request', reject_friend_request_path(r.id) %>
+<% @requests.each do |requester| %>
+    user id: <%= requester.sender_id %>
+    request id: <%= requester.id %>
+    <%= link_to 'Accept request', accept_friend_request_path(requester.id) %>
+    <%= link_to 'Reject request', reject_friend_request_path(requester.id) %>
+<% end %>
+<%= @requester %>
+
+
+<h1>friends</h1>
+
+<% @friends.each do |f| %>
+    <%= f.email %>
 <% end %>
