--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,18 @@
 <%= render "form" %>
 
 <% @posts.each do |post| %>
-    <%= post.body %>
-    <%= form_with url: "/posts/#{post.id}/likes/", method: :post do |form| %>
-        <%= submit_tag "like post" %>
-    <% end %>
-    <%= post.likes.count %> likes
+    <div>
+        <%= post.body %>
+        <% if @likes.where(post_id: post.id).exists? == true %>
+            <%= form_with url: post_like_path(post.id, @likes.where(post_id: post.id)[0].id), method: :delete do |form| %>
+                <%= submit_tag "unlike post" %>
+            <% end %> 
+        <% else %>
+            <%= form_with url: "/posts/#{post.id}/likes/", method: :post do |form| %>
+                <%= submit_tag "like post" %>
+            <% end %>
+        <% end %>
+        <%= post.likes.count %> likes
+    </div>
 <% end %>
+
