--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,9 @@
         <ul>
             <% post.comments.each do |comment| %>
                 <li><%= comment.body %></li>
+                <% if current_user.id == comment.commenter_id %>
+                    <%= link_to "Delete comment", comment_path(comment.id), method: :delete %>
+                <% end %>
             <% end %>
         </ul>
         <%= form_with model: @comment do |form| %>
