--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <% end %>
     </div>
     <div>
-      <%= link_to 'Profile' %>
+      <%= link_to 'Profile', user_path(current_user.id) %>
     </div>
     <div>
       <%= link_to 'sign out', destroy_user_session_path, method: :delete %>
