Users#index shows all users not already friends or having pending requests

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,18 @@
 
 <h1>Users</h1>
 current: <%= current_user.email %>
+   <% @users.each do |user| %>
 
-<% @users.each do |user| %>
-   <li> <%= user.email %></li>
-   <%= form_with model: @request do |form| %>
-    <%= hidden_field_tag :recipient_id, user.id %>
-    <%= form.submit "Send Friend request" %>
+         <li> <%= user.email %></li>
+            <%= form_with url: friend_requests_path(current_user.id), method: :post do |form| %>
+            <%= hidden_field_tag :recipient_id, user.id %>
+            <%= form.submit "Send Friend request" %>
+            <% end %>
+
    <% end %>
 
-<% end %>
+   <% @requests.each do |r| %>
+      <%= r.recipient_id %>
+   <% end %>
+
+
