--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,11 @@
     </div>
     <% end %>
   </nav>
+  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, method: :post %>
+
     <%= yield %>
   </body>
 </html>
+
+
+
