--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,83 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.post {
+    padding: 10px;
+    width: 50%;
+    margin: auto;
+    margin-top: 30px;
+    border: 1px solid rgb(104, 238, 238);
+    border-radius: 5px;
+    background-color: azure;
+    box-shadow: 5px 5px 5px grey;
+
+
+}
+
+.post-content {
+    margin-bottom: 5px;
+}
+
+.post-body {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 16px;
+}
+
+.post-author {
+    font-size: 12px;
+}
+
+.like-form {
+    margin-bottom: 7px;
+}
+
+.like-count {
+    font-size: 12px;
+}
+
+hr {
+    border:none;
+    border-top: thin solid rgb(231, 224, 224);
+    background-color: rgb(231, 224, 224);
+}
+
+.comment-form input[type=text] {
+    border-radius: 20px;
+    width: 70%;
+    padding: 5px 10px;
+    margin-top: 15px;
+
+}
+
+.comment-form input[type=submit] {
+    background-color: black;
+    color: white;
+    border-radius: 18px;
+    border: none;
+    padding: 7px 9px;
+    margin-left: 5px;
+}
+
+.comment {
+    padding: 10px;
+    font-size: 12px;
+    background-color: rgb(175, 211, 211);
+}
+
+.comments {
+    border-radius: 18px;
+
+}
+
+.commenter {
+    font-weight: bold;
+}
+
+.delete-com {
+    font-size: 9px;
+    color: rgb(94, 93, 93);
+    margin-bottom: 2px;
+    
+}
