--- a/app/views/friend_requests/index.html.erb
+++ b/app/views/friend_requests/index.html.erb
@@ -1,4 +1,4 @@
-<h1>requests</h1>
+<h1>Pending Friend Requests</h1>
 
 <% @requests.each do |requester| %>
     user id: <%= requester.sender_id %>
@@ -9,7 +9,7 @@
 <%= @requester %>
 
 
-<h1>friends</h1>
+<h1>Friends</h1>
 
 <% @friends.each do |f| %>
     <%= f.email %>
