--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,3 +50,13 @@ body {
   #sign-out {
       float: right;
   }
+
+  footer {
+    height: 100px;
+    background-color: white;
+    margin-top: 40px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
+  }
