--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,14 +23,14 @@
         <% if @requests.count > 0 %>
           <%= link_to "Notifications: #{@requests.count}" %>
         <% else %>
-          <%= link_to "Notifications" %>
+          <%= link_to "Notifications", friend_requests_path %>
         <% end %>
         </li>
         <li>
           <%= link_to 'Profile', user_path(current_user.id) %>
         </li>
         <li id="sign-out">
-          <%= link_to 'sign out', destroy_user_session_path, method: :delete %>
+          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
         </li>
       <% end %>
     </ul>
@@ -39,6 +39,9 @@
   </nav>
 
     <%= yield %>
+    <footer>
+    
+    </footer>
   </body>
 </html>
 
