--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @post do |form| %>
-    <%= form.text_field :body %>
+<%= form_with model: @post, id: "new-post" do |form| %>
+    <%= form.text_area :body %>
     <%= submit_tag "Post" %>
 <% end %>
