--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,6 +12,9 @@
             <div class="post-body">
                 <%= post.body %>
             </div>
+            <div>
+                <%= image_tag(post.photo, style:'width:100%') if post.photo.attached? %>
+            </div>
             <hr>
             <div class="like-count">
                 <%= post.likes.count %> likes
