--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -116,7 +116,25 @@ hr {
         width: 100%;
     }
 
+    input[type=submit]:hover {
+        background-color: blue;
+    }
+
 
 }
 
 
+
+.img-upload {
+    background-color: cadetblue;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 18px;
+    color: white;
+    text-align: center;
+}
+
+.img-upload:hover {
+    background-color: rgb(42, 42, 124);
+}
