Posts appear in descending order on profile and index view

--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -9,6 +9,9 @@
             <div class="post-body">
                 <%= post.body %>
             </div>
+            <div>
+                <%= image_tag(post.photo, style:'width:100%') if post.photo.attached? %>
+            </div>
             <hr>
             <div class="like-count">
                 <%= post.likes.count %> likes
