--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,18 +16,19 @@
     <div>
       <ul>
       <li>
-        <%= link_to "Home", root_path %>
+        <%= link_to "", root_path, class: "fas fa-home" %>
       </li>
       <% if current_user %>
         <li>
         <% if @requests.count > 0 %>
-          <%= link_to "Notifications: #{@requests.count}" %>
+          <%= link_to " ", class: "fas fa-flag" %> <div class="nots"><%= @requests.count %></div>
         <% else %>
-          <%= link_to "Notifications", friend_requests_path %>
+          <%= link_to " ", friend_requests_path, class: "fas fa-flag" %>
+          
         <% end %>
         </li>
         <li>
-          <%= link_to 'Profile', user_path(current_user.id) %>
+          <%= link_to "", user_path(current_user.id), class: "fas fa-user" %>
         </li>
         <li id="sign-out">
           <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
