--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
             </div>
             <hr>
             <div class="like-count">
-                <%= post.likes.count %> likes
+            <i class="fas fa-thumbs-up"></i>  <%= post.likes.count %>
             </div>
             <hr>
         </div>
