--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,8 +1,8 @@
-Welcome to example.com, <%= @user.email %>
+Welcome to example Fakebooked.com!
 ===============================================
 
-You have successfully signed up to example.com,
-your username is: <%= @user.id %>.
+You have successfully signed up to Facebooked.com,
+your username is: <%= @user.email %>.
 
 To login to the site, just follow this link: <%= @url %>.
 
