--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,10 +5,11 @@
     <div class="img">
         <%= image_tag(@user.avatar, style:'width:20%') if @user.avatar.attached? %>
     </div>
-
+    <% if current_user == @user %>
     <div class="edit">
         <%= link_to "Edit profile", edit_user_path(@user.id) %>
     </div>
+    <% end %>
 </div>
 
 
