Configure cloudinary for production

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,7 +5,7 @@
     <label >
         Upload new image
         <span style="display:none;">
-            <%= form.file_field :photo %>
+            <%= form.file_field :photo, direct_upload: true %>
         </span>
     </label>
     </div>
