--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,3 +82,14 @@ body {
     font-weight:bold;
     top: 3px;
   }
+
+  #login-form {
+    margin: 70px 500px;
+    border: cornflowerblue 1px solid;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: cadetblue;
+    box-shadow: 5px 5px 5px darkcyan ;
+  }
+
+
