Add users index to nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,10 @@
         <% end %>
         </li>
         <li>
+        <%= link_to "", users_path, class: "fas fa-users" %>
+
+        </li>
+        <li>
           <%= link_to "", user_path(current_user.id), class: "fas fa-user" %>
         </li>
         <li id="sign-out">
