--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,20 @@
-<div class="user-info">
-    <div>
-        Email: <%= @user.email %>
+<div class="profile-wrapper">
+    <div class="user-info">
+        <div class="img">
+            <%= image_tag(@user.avatar, style:'width:50%') if @user.avatar.attached? %>
+        </div>
+        <div>
+            Email: <%= @user.email %>
+        </div>
+        <% if current_user == @user %>
+        <div class="edit">
+            <%= link_to "Edit profile", edit_user_path(@user.id) %>
+        </div>
+        <% end %>
     </div>
-    <div class="img">
-        <%= image_tag(@user.avatar, style:'width:20%') if @user.avatar.attached? %>
-    </div>
-    <% if current_user == @user %>
-    <div class="edit">
-        <%= link_to "Edit profile", edit_user_path(@user.id) %>
-    </div>
-    <% end %>
+
+
+    <%= render partial: "posts/posts" %>
 </div>
-
-
-<%= render partial: "posts/posts" %>
 
 
