Devise login form styled and responsive

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+/* * {
+  border: 1px solid red;
+} */
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
@@ -82,12 +85,77 @@ body {
     font-weight:bold;
     top: 3px;
   }
-
   #login-form {
-    margin: 30px 40px;
- 
-    padding: 15px;
+    margin: auto;
+    margin-left: 35%;
+    width: 50%;
+  }
+  #login-form form {
+    display: grid;
+    grid-template-columns: minmax(300px, 1fr);
+    margin: 10px 0px;
 
   }
+
+  #login-form form input {
+    width: 60%;
+
+
+  }
+ 
+  #login-form form input[type=checkbox] {
+    width: 5%;
+    margin: 0px;
+    transform: scale(2);
+  }
+
+  .fb-btn {
+    background-color: blue;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 20px;
+    padding: 7px 0px;
+    font-size: 20px;
+  }
+  .sign-in-btns {
+    margin-top: 3px;
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .sign-in-btns a {
+    margin: 2px 0px;
+    width: 60%;
+  }
+
+  @media (max-width: 600px) {
+    #login-form {
+      width: 90%;
+      margin-left: auto;
+
+    }
+
+    #login-form form input {
+      width: 80%;
+      border: 1px solid rgb(58, 57, 57);
+      border-radius: 3px;
+
+    }
+    .log-in-btn {
+      border-radius: 20px !important;
+    }
+
+    .sign-in-btns a {
+      width: 80%;
+    }
+    #login-form form input[type=checkbox] {
+      width: 5%;
+    }
+
+  }
+
+
 
 
