--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
          <div>
             <%= form_with url: friend_requests_path(current_user.id), method: :post do |form| %>
                <%= hidden_field_tag :recipient_id, user.id %>
-               <%= form.submit "Send Friend request" %>
+               <%= form.submit "Send Friend Request", class: "frnd-add-btn" %>
             <% end %>
          </div>
       </div>
