--- a/app/assets/stylesheets/friend_requests.scss
+++ b/app/assets/stylesheets/friend_requests.scss
@@ -50,3 +50,14 @@
 .no-rqst {
     margin: 20px;
 }
+
+ .requests {
+    padding: 20px;
+    margin-top: 0px;
+    border-radius: 5px;
+    background-color: azure;
+    box-shadow: 5px 5px 5px grey;
+    width: 50%;
+    margin: auto;
+    margin-top: 50px;
+}
