--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,11 +3,10 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 .post {
-    padding: 10px;
+    padding: 30px;
     width: 50%;
     margin: auto;
     margin-top: 30px;
-    border: 1px solid rgb(104, 238, 238);
     border-radius: 5px;
     background-color: azure;
     box-shadow: 5px 5px 5px grey;
@@ -42,6 +41,8 @@
 
 .post-author {
     font-size: 12px;
+    font-weight: bold;
+    color:rgb(94, 93, 93);
 }
 
 .like-form {
