--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -23,7 +23,6 @@
     text-align: center;
     padding: 20px;
     margin-top: 0px;
-    border: 1px solid rgb(104, 238, 238);
     border-radius: 5px;
     background-color: azure;
     box-shadow: 5px 5px 5px grey;
@@ -31,7 +30,8 @@
         margin: 5px;
     }
     img {
-        height: 300px;
+        height: auto;
+        width: 100%;
         border-radius: 50%;
     }
     
@@ -61,7 +61,6 @@
     margin: auto;
     margin-top: 50px;
     width: 50%;
-    border: 1px solid rgb(104, 238, 238);
     border-radius: 5px;
     background-color: azure;
     box-shadow: 5px 5px 5px grey; 
@@ -100,4 +99,26 @@ h1 {
     margin: 20px;
 }
 
+#friend-suggestions, .friends-list {
+    padding: 10px;
+    width: 50%;
+    margin: auto;
+    margin-top: 30px;
+    border-radius: 5px;
+    background-color: azure;
+    box-shadow: 5px 5px 5px grey;
+    padding: 50px;
+    padding-top: 20px;
+    h1 {
+        text-align: center;
+    }
+    input[type=submit] {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    input[type=submit]:hover {
+        background-color: blue;
+
+    }
+}
 
