--- a/app/views/friend_requests/index.html.erb
+++ b/app/views/friend_requests/index.html.erb
@@ -1,28 +1,22 @@
-<h1>Pending Friend Requests</h1>
+<div class="requests">
+    <h1>Pending Friend Requests</h1>
 
-<% @requests.each do |requester| %>
-    <div class="frnd-request">
-        <div class="user">
-            <%= User.where(id: requester.id)[0].email %>
-        </div>
-        <%= link_to 'Accept request', accept_friend_request_path(requester.id) %>
-        <%= link_to 'Reject request', reject_friend_request_path(requester.id), class: "reject" %>
-    </div>
-<% end %>
-<% if @requests.length == 0 %>
-    <div class="no-rqst">
-        No new friend requests
-    </div>
-<% end %>
-
-<% if @friends.length > 0 %>
-    <h1>Friends</h1>
-    <div class="friends">
-        <% @friends.each do |f| %>
+    <% @requests.each do |requester| %>
+        <div class="frnd-request">
             <div class="user">
-                <%= link_to f.email, user_path(f.id) %>
+                <%= User.where(id: requester.id)[0].email %>
             </div>
-        <% end %>
-    </div>
-<% end %>
+            <%= link_to 'Accept request', accept_friend_request_path(requester.id) %>
+            <%= link_to 'Reject request', reject_friend_request_path(requester.id), class: "reject" %>
+        </div>
+    <% end %>
+    <% if @requests.length == 0 %>
+        <div class="no-rqst">
+            No new friend requests
+        </div>
+    <% end %>
+</div>
+
+
+
 
