Edit user form style edits

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -82,6 +82,15 @@ form {
         width: 100%;
     }
 
+    #save-edits {
+        width: 30%;
+    }
+
+    #save-edits:hover {
+        background-color: blue;
+    }
+
+
 
 
 }
