--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
    <% @users.each do |user| %>
       <div class="friend-suggest">
          <div> <%= user.email %></div>
-         <div>
+         <div class="rqst-container">
             <%= form_with url: friend_requests_path(current_user.id), method: :post do |form| %>
                <%= hidden_field_tag :recipient_id, user.id %>
                <%= form.submit "Send Friend Request", class: "frnd-add-btn" %>
