Recovering from git fiasco

--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -14,7 +14,7 @@
             </div>
             <hr>
             <div class="like-count">
-            <i class="fas fa-thumbs-up"></i>  <%= post.likes.count %>
+            <i class="fas fa-thumbs-up fa-2x"></i>  <h1><%= post.likes.count %></h1>
             </div>
             <hr>
         </div>
