--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Likes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.like-count {
+    font-size: 20px;
+    line-height: 25px;
+    h1 {
+        display: inline;
+
+    }
+}
